# CollabSync

./: .gitignore  AGENTS.md  CMakeLists.txt  NETWORKING.md  README.md  make.sh  start-session.sh
.github/workflows/: windows-build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Audio/: JitterBuffer.h  OpusCodec.cpp  OpusCodec.h  SharedAudioBuffer.cpp  SharedAudioBuffer.h
Source/Clock/: SessionClock.cpp  SessionClock.h
Source/Midi/: MidiCapture.cpp  MidiCapture.h
Source/Network/: PeerConnection.cpp  PeerConnection.h  PeerCrypto.cpp  PeerCrypto.h  SignalingClient.cpp  SignalingClient.h  SignalingServer.cpp  SignalingServer.h
Source/Session/: Recorder.h
Source/UI/: CollabSyncComponents.cpp  CollabSyncComponents.h  CollabSyncLookAndFeel.cpp  CollabSyncLookAndFeel.h  CollabSyncTheme.h  GeneratedFileCard.cpp  GeneratedFileCard.h
scripts/: package.sh  postinstall
signaling/: server.js
signaling/worker/: README.md  package.json  wrangler.toml
signaling/worker/src/: index.js
